--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #010415;
 
+  width: 100%;
+  padding: 10px;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
